# witslog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCEMENT.md  LAST_SESSION_PLAN.md  LICENSE  PHASES.md  PLAN.md  README.md
.agents/skills/verify/: SKILL.md
.codegraph/: .gitignore  daemon.pid
.github/workflows/: ci.yml  release-node-sdk.yml  release.yml
bench/: Cargo.toml
bench/baseline/: criterion--buffered_enqueue.json  criterion--fts5_backfill_2000_rows.json  criterion--fts_search_first_page.json  write_throughput--batched_1000_in_one_transaction.json  write_throughput--single_insert.json
bench/benches/: buffered_log_latency.rs  index_build_cost.rs  search_latency.rs  write_throughput.rs
bindings/: CONTRACT.md
bindings/browser/: witslog-browser.js  witslog-websocket.js
bindings/browser/test/: witslog-browser.test.js  witslog-websocket.test.js
bindings/e2e/: assert_no_argv.py  browser_ingest_smoke.js  node_smoke.js  php_smoke.php  py_smoke.py  run.ps1
bindings/node/: CHANGELOG.md  README.md  all-wits-witslog-0.6.4.tgz  browser.d.ts  browser.js  fetch.d.ts  fetch.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
bindings/node/frameworks/: axios.d.ts  axios.js  express.js  hocuspocus.d.ts  hocuspocus.js  next.d.ts  next.js  react-query.d.ts  react-query.js
bindings/node/lib/: clamp.js  cli-locator.js  errors.js  ffi.js  ingest-core.js  payload.js
bindings/node/test/: axios.test.js  bin_shim.test.js  bootstrap.test.js  browser_subpath.test.js  bundler_koffi.test.js  clamp.test.js  cli_locator.test.js  exception_cause_chain.test.js  express_ingest.test.js  fetch.test.js  ffi_errors.test.js  hocuspocus.test.js  next_adapter.test.js  next_ingest.test.js  payload.test.js  react_query_adapter.test.js
bindings/php/: CHANGELOG.md  README.md  composer.json  phpunit.xml
bindings/php/src/: Errors.php  Ffi.php  Payload.php  Witslog.php  WitslogContractError.php  WitslogError.php  WitslogLibraryError.php  WitslogWriteError.php
bindings/php/src/Laravel/: WitslogServiceProvider.php
bindings/php/tests/: FfiErrorsTest.php  PayloadTest.php
bindings/python/: CHANGELOG.md  README.md  pyproject.toml
bindings/python/tests/: test_ffi_errors.py  test_payload.py
bindings/python/witslog/: __init__.py  _ffi.py  errors.py
bindings/python/witslog/frameworks/: __init__.py  django.py  fastapi.py  flask.py
crates/witslog-cli/: Cargo.toml
crates/witslog-cli/src/: main.rs  style.rs
crates/witslog-cli/tests/: p11_json_output.rs  p12_color_output.rs  p8_integration.rs  p9_integration.rs
crates/witslog-config/: Cargo.toml
crates/witslog-config/src/: lib.rs
crates/witslog-core/: Cargo.toml
crates/witslog-core/src/: buffer.rs  crypto.rs  enrich.rs  event.rs  lib.rs  redact.rs  taxonomy.rs
crates/witslog-ffi/: Cargo.toml
crates/witslog-ffi/src/: lib.rs
crates/witslog-mcp/: Cargo.toml
crates/witslog-mcp/src/: error.rs  lib.rs  registry.rs  schema.rs  server.rs  tools.rs  transport.rs
crates/witslog-mcp/tests/: p5_integration.rs
crates/witslog-plugin/: Cargo.toml
crates/witslog-plugin/src/: lib.rs
crates/witslog-query/: Cargo.toml
crates/witslog-query/src/: aggregates.rs  correlate.rs  error.rs  filters.rs  lib.rs  search.rs
crates/witslog-runtime/: Cargo.toml
crates/witslog-runtime/examples/: p6_provider.rs
crates/witslog-runtime/src/: lib.rs  notify.rs  tracing_layer.rs
crates/witslog-runtime/tests/: p6_integration.rs  p9_crypto_integration.rs
crates/witslog-store/: Cargo.toml
crates/witslog-store/src/: audit.rs  conn.rs  error.rs  lib.rs  migrate.rs  sink.rs  taxonomy.rs  writer.rs
crates/witslog-store/tests/: m1_integration.rs  p1_integration.rs  p2_integration.rs  p3_integration.rs  p7_concurrency.rs  p7_load.rs
docs/: install.md  perf.md  security-review-v0.1.7.md
examples/: p2_classify.rs
install/: install.ps1  install.sh
install/homebrew/: witslog.rb
install/scoop/: witslog.json
scripts/: check_bench_regression.ps1  measure_memory.ps1
tests/: m1_integration.rs
