[workspace]
members = [
    "crates/witslog-core",
    "crates/witslog-store",
    "crates/witslog-config",
    "crates/witslog-query",
    "crates/witslog-mcp",
    "crates/witslog-cli",
    "crates/witslog-ffi",
    "crates/witslog-runtime",
    "bench",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["witslog team"]
license = "Apache 2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid", "hooks"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v7", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.8"
regex = "1"
hostname = "0.4"
