[package]
name = "witslog-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "witslog"
path = "src/main.rs"

[dependencies]
witslog-core = { path = "../witslog-core" }
witslog-store = { path = "../witslog-store" }
witslog-config = { path = "../witslog-config" }
witslog-query = { path = "../witslog-query" }
witslog-mcp = { path = "../witslog-mcp" }
clap.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
