[package]
name = "witslog-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
hostname.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
