[package]
name = "witslog-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
witslog-core = { path = "../witslog-core" }
witslog-store = { path = "../witslog-store" }
witslog-config = { path = "../witslog-config" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
