[package]
name = "witslog-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
uuid = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

witslog-core = { path = "../witslog-core" }
witslog-store = { path = "../witslog-store" }
witslog-query = { path = "../witslog-query" }
witslog-config = { path = "../witslog-config" }
