[package]
name = "witslog-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
uuid = { workspace = true }
base64 = "0.22"

witslog-core = { path = "../witslog-core" }
witslog-store = { path = "../witslog-store" }
