[package]
name = "witslog-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
witslog-core = { path = "../witslog-core" }

[dev-dependencies]
tempfile.workspace = true
witslog-query = { path = "../witslog-query" }
